progress on bugfix for notification rule creation race conditions with state updates only complete data return step on click added more UI to expanded notifications

--- a/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
+++ b/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
@@ -30,3 +30,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+// Read only styles
+.notification-rules-container.read-only {
+  pointer-events: none;
+  .chata-notification-group-container-copy {
+    border: none;
+  }
+}
