--- a/src/components/LoadingDots/LoadingDots.scss
+++ b/src/components/LoadingDots/LoadingDots.scss
@@ -1,3 +1,10 @@
+.loading-container-centered {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .response-loading {
   display: inline-block;
   position: relative;
