--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -23,6 +23,10 @@
   animation-delay: 0s;
   // opacity: 0;
 
+  &.expanded .chata-notification-list-item-header {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+  }
+
   &:hover {
     &:not(.expanded) {
       background-color: rgba(0, 0, 0, 0.01);
@@ -56,14 +60,15 @@
     height: 0;
     opacity: 0;
     &.visible {
-      height: 300px;
+      height: 350px;
       opacity: 1;
     }
   }
 
   .chata-notification-extra-content {
     text-align: center;
-    height: 40px;
+    flex: 0;
+    padding: 8px;
   }
 
   .chata-notification-description {
@@ -79,13 +84,49 @@
     cursor: pointer;
   }
 
-  .chata-notification-data-container {
+  .chata-notification-query-title {
+    flex: 0 0 auto;
+    font-size: 14px;
+    font-family: inherit;
+    color: currentcolor;
+    opacity: 0.9;
+    font-weight: 600;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin: 0 10px;
+    padding-top: 20px;
+    padding-bottom: 7px;
+  }
+  .chata-notification-details-container {
     flex: 1;
-    height: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: stretch;
+    overflow: hidden;
+
+    .chata-notification-details {
+      flex: 1;
+      padding: 20px;
+      padding-left: 0;
+    }
+  }
+
+  .chata-notification-data-container {
+    // flex: 2 2;
+    flex: 1;
     width: 100%;
     padding: 0 20px;
-    // max-height: 100px;
-    // padding: 7px 20px;
+
+    .chata-table-container {
+      width: 100%;
+      padding: 0 10px;
+    }
+    .chata-table {
+      opacity: 0.9;
+      color: currentColor;
+      font-size: 11px;
+    }
   }
 
   .chata-notification-data-title {
