--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -23,8 +23,30 @@
   animation-delay: 0s;
   // opacity: 0;
 
+  .viz-toolbar {
+    position: relative;
+    border: none;
+
+    .chata-toolbar-btn {
+      height: 33px;
+    }
+  }
+
+  .chata-notificaiton-details-title {
+    font-weight: 600;
+    padding-top: 20px;
+    padding-bottom: 5px;
+  }
+
   &.expanded .chata-notification-list-item-header {
     border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+  }
+
+  .chata-notification-details {
+    overflow: hidden;
+  }
+  &.animation-complete .chata-notification-details {
+    overflow: auto;
   }
 
   &:hover {
@@ -60,7 +82,7 @@
     height: 0;
     opacity: 0;
     &.visible {
-      height: 350px;
+      height: 400px;
       opacity: 1;
     }
   }
@@ -69,6 +91,7 @@
     text-align: center;
     flex: 0;
     padding: 8px;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
   }
 
   .chata-notification-description {
@@ -106,17 +129,29 @@
     overflow: hidden;
 
     .chata-notification-details {
-      flex: 1;
+      flex: 1 1;
       padding: 20px;
-      padding-left: 0;
+      padding-top: 0;
+      opacity: 0.9;
     }
   }
 
   .chata-notification-data-container {
-    // flex: 2 2;
-    flex: 1;
-    width: 100%;
-    padding: 0 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    flex: 3 3 0px;
+    overflow: hidden;
+    border-right: 1px solid rgba(0, 0, 0, 0.05);
+
+    .chata-notificaton-chart-container {
+      flex: 1;
+      height: 100%;
+      width: 0;
+      display: flex;
+      flex-direction: column;
+      padding: 0px 20px 10px 20px;
+    }
 
     .chata-table-container {
       width: 100%;
@@ -207,6 +242,12 @@
     transition-property: opacity;
     transition-duration: 0.2s;
     transition-timing-function: ease;
+  }
+
+  .chata-notification-viz-switcher {
+    flex: 0 0 50px;
+    padding: 10px;
+    border-left: 1px solid rgba(0, 0, 0, 0.05);
   }
 
   .chata-notification-img-container {
