--- a/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
+++ b/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
@@ -33,7 +33,7 @@
 
 // Read only styles
 .notification-rules-container.read-only {
-  pointer-events: none;
+  // pointer-events: none;
   .chata-notification-group-container-copy {
     border: none;
   }
