--- a/src/components/VizToolbar/VizToolbar.scss
+++ b/src/components/VizToolbar/VizToolbar.scss
@@ -5,6 +5,10 @@
   border-radius: 6px;
   line-height: 28px;
   border: 1px solid #d3d3d352;
+
+  &.vertical .chata-toolbar-btn {
+    display: block;
+  }
 }
 
 .chata-toolbar-btn {
@@ -15,7 +19,7 @@
   font-size: 16px;
   line-height: 28px;
   vertical-align: top;
-  color: inherit;
+  color: var(--chata-viz-toolbar-accent-color);
   cursor: pointer;
   outline: none !important;
 }
