--- a/src/components/Notifications/Rule/Rule.scss
+++ b/src/components/Notifications/Rule/Rule.scss
@@ -80,6 +80,18 @@
   }
 }
 
+.read-only-rule-term {
+  display: inline-block;
+  border: 1px solid rgba(0, 0, 0, 0.06);
+  background: rgba(0, 0, 0, 0.02);
+  padding: 3px 7px;
+  line-height: 1.5em;
+  margin-right: 5px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  border-radius: 4px;
+}
+
 .rule-input-select-bubbles-icon {
   svg {
     height: 17px;
