fix hidden resize handle

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -302,6 +302,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  pointer-events: none;
 
   &.right {
     height: 100vh;
@@ -346,6 +347,7 @@
   overflow: hidden;
   box-sizing: border-box;
   display: flex;
+  pointer-events: all;
 
   .tab {
     position: relative;
