fix single value response cursor style

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -193,6 +193,7 @@
   color: inherit;
   text-decoration: underline;
   font-weight: 600;
+  cursor: pointer;
 }
 .chata-safety-net-container {
   width: 100%;
