change default logo to blue outlined bubbles

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -147,6 +147,7 @@
 }
 .chata-drawer .drawer-handle {
   background: var(--chata-messenger-background-color);
+  color: #28a8e0; // For default chata logo
   transition: opacity 0.5s ease;
   overflow: hidden;
   width: 50px;
