--- a/src/components/QueryInput/QueryInput.scss
+++ b/src/components/QueryInput/QueryInput.scss
@@ -136,7 +136,8 @@
 
 .chat-bar-input-icon {
   position: absolute;
+  color: #28a8e0; // For chata logo
   font-size: 20px;
   left: 30px;
-  top: 14px;
+  top: 15px;
 }
