--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -50,7 +50,7 @@ body {
 }
 
 .ui-overlay.demo {
-  background-image: url('./xero_ui.png');
+  background-image: url('./demo_ui.png');
 }
 
 /* .ui-overlay.sage-demo {
@@ -71,9 +71,4 @@ body {
 
 .ant-form-item input {
   max-width: unset;
-}
-
-.drawer-handle img.demo {
-  width: 50px;
-  height: 50px;
 }
