--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -58,7 +58,7 @@
 }
 
 // Toolbars
-.autoql-options-toolbar {
+.chata-dashboard-tile .autoql-options-toolbar {
   transition: opacity 0.3s ease, color 0.3s ease;
   visibility: hidden;
   opacity: 0;
