feat(dashboards): add isEditable prop
Also added messaging for empty state dashboards. If isEditable is true the use will have the option
to edit the dashboard by clicking on a butto

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -18,3 +18,18 @@
   height: 30vh;
   overflow: hidden;
 }
+
+.empty-dashboard-message-container {
+  font-family: var(--chata-dashboard-font-family);
+  letter-spacing: 0.02em;
+  text-align: center;
+  padding: 100px;
+  height: 100%;
+  width: 100%;
+}
+
+.empty-dashboard-new-tile-btn {
+  color: var(--chata-dashboard-accent-color);
+  font-weight: bold;
+  cursor: pointer;
+}
