fix(dashboards): add better messaging for empty tiles before and after running dashboard

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -140,6 +140,8 @@
 }
 .chata-execute-query-icon {
   font-size: 23px;
+  vertical-align: bottom;
+  line-height: 24px;
 
   svg {
     height: 19px;
