fix(dashboards): fix drilldowns for list queries in bottom of split view dashboard tiles

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -462,6 +462,11 @@
 
 .dashboard-tile-placeholder-text {
   color: rgba(0, 0, 0, 0.3);
+
+  .play-icon {
+    vertical-align: bottom;
+    line-height: 20px;
+  }
 }
 
 /* React Grid Layout overrides */
