--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -159,9 +159,17 @@
   border-radius: 50px !important;
   font-size: 22px;
 
-  .chata-bubbles-outlined svg {
-    width: 26px;
-    height: 26px;
+  .chata-bubbles-outlined {
+    position: absolute;
+    vertical-align: top;
+    top: 11px;
+    left: 13px;
+
+    svg {
+      position: absolute;
+      width: 26px;
+      height: 26px;
+    }
   }
 }
 .chata-drawer.drawer-right .drawer-handle {
