add slack and teams menu items in options toolbar

--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -7,3 +7,14 @@
     margin-bottom: -0.1em;
   }
 }
+
+.slack-logo {
+  display: inline-block;
+  height: 100%;
+
+  img {
+    vertical-align: middle;
+    height: 1em;
+    width: 1em;
+  }
+}
