feature(dashboards): Added background to themeConfig prop

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,5 +1,5 @@
 .chata-dashboard-container {
-  background: #fafafa;
+  background: var(--chata-dashboard-background-color);
   height: 100%;
   width: 100%;
   overflow: hidden;
