fix: do not show table options if all columns are hidden

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -16,12 +16,12 @@
 
 // Size
 .chata-btn.small {
-  padding: '2px 8px';
-  margin: '2px 3px';
+  padding: 2px 8px;
+  margin: 2px 3px;
 }
 .chata-btn.large {
-  padding: '5px 16px';
-  margin: '2px 5px';
+  padding: 5px 16px;
+  margin: 2px 5px;
 }
 
 // Type
