--- a/src/components/Notifications/NotificationSettings/NotificationSettings.scss
+++ b/src/components/Notifications/NotificationSettings/NotificationSettings.scss
@@ -13,15 +13,12 @@
 
     transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
 
-    cursor: pointer;
+    &.USER {
+      cursor: pointer;
 
-    &:hover {
-      background: rgba(0, 0, 0, 0.01);
-    }
-
-    &.expanded {
-      height: 300px;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      &:hover {
+        background: rgba(0, 0, 0, 0.01);
+      }
     }
   }
 
