feat(data messenger):  Invert default colour for DM handle (blue background with white logo)

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -159,8 +159,8 @@
   }
 
   .drawer-handle {
-    background: var(--chata-messenger-background-color);
-    color: #28a8e0; // For default chata logo
+    background-color: #26a7df; // For default chata logo
+    color: #fff;
     transition: opacity 0.5s ease;
     overflow: hidden;
     width: 50px;
