--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -159,8 +159,6 @@
   }
 
   .drawer-handle {
-    background: var(--chata-messenger-background-color);
-    color: #28a8e0; // For default chata logo
     transition: opacity 0.5s ease;
     overflow: hidden;
     width: 50px;
@@ -168,16 +166,21 @@
     border-radius: 50px !important;
     font-size: 22px;
 
-    .chata-bubbles-outlined {
-      position: absolute;
-      vertical-align: top;
-      top: 11px;
-      left: 12px;
+    &.default-logo {
+      background-color: #26a7df;
+      color: #fff;
 
-      svg {
+      .chata-bubbles-outlined {
         position: absolute;
-        width: 26px;
-        height: 26px;
+        vertical-align: top;
+        top: 11px;
+        left: 12px;
+
+        svg {
+          position: absolute;
+          width: 26px;
+          height: 26px;
+        }
       }
     }
   }
