feat(tables and charts): sort tables by date descending, sort chart axis by date ascending (default)

--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -34,7 +34,9 @@
   fill-opacity: 1 !important;
 }
 
-.chata-chart-container .vertex-dot:hover {
+.chata-chart-container .vertex-dot:hover,
+.chata-chart-container .line-dot:hover,
+.chata-chart-container .line-dot.active {
   opacity: 1 !important;
 }
 
