--- a/example/src/index.css
+++ b/example/src/index.css
@@ -30,27 +30,27 @@ body {
 }
 
 .ui-overlay.locate {
-  background-image: url('./locate_ui.png');
+  background-image: url('./images/locate_ui.png');
 }
 
 .ui-overlay.purefacts {
-  background-image: url('./purefacts_ui.png');
+  background-image: url('./images/purefacts_ui.png');
 }
 
 .ui-overlay.qbo-demo {
-  background-image: url('./qbo_demo_ui.png');
+  background-image: url('./images/qbo_demo_ui.png');
 }
 
 .ui-overlay.spira {
-  background-image: url('./spira_ui2.png');
+  background-image: url('./images/spira_ui2.png');
 }
 
 .ui-overlay.vitruvi {
-  background-image: url('./vitruvi_ui.png');
+  background-image: url('./images/vitruvi_ui.png');
 }
 
 .ui-overlay.demo {
-  background-image: url('./demo_ui.png');
+  background-image: url('./images/demo_ui.png');
 }
 
 /* .ui-overlay.sage-demo {
