--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -18,7 +18,7 @@
 }
 
 .chata-select-popup-container {
-  background: var(--chata-messenger-background-color);
+  background: var(--chata-messenger-background-color, white);
   padding: 10px 0;
   max-height: 300px;
   overflow-y: auto;
