--- a/src/components/Notifications/Group/Group.scss
+++ b/src/components/Notifications/Group/Group.scss
@@ -2,17 +2,33 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   padding: 10px;
+}
 
-  // &.no-border {
-  //   border: none;
-  // }
+.notification-rule-add-group-btn {
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  border-radius: 20px;
+  background: var(--chata-messenger-accent-color, #26a7df);
+  color: white;
+  line-height: 38px;
+  text-align: center;
+  font-size: 20px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
+  transition: all 0.2s ease;
+  margin-right: 5px;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 1px 3px 0px rgba(0, 0, 0, 0.32);
+  }
 }
 
 .notification-group-wrapper {
   position: relative;
   margin-right: 0px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
   &:first-of-type {
     margin-top: 0;
