--- a/src/components/Steps/Steps.scss
+++ b/src/components/Steps/Steps.scss
@@ -68,10 +68,12 @@
 .chata-step-subtitle {
   font-size: 13px;
   padding-top: 6px;
+  padding-bottom: 6px;
   color: rgba(0, 0, 0, 0.4);
 }
 .chata-step-content {
   margin: 15px;
+  margin-top: 0;
 }
 .chata-step-content-container {
   transition-timing-function: ease;
